--- a/src/app/comments/comments.component.scss
+++ b/src/app/comments/comments.component.scss
@@ -281,6 +281,7 @@ button {
   font-size: 42px;
 }
 
+
 .yellow {
   color: rgba(255, 199, 0, 1);
 }
@@ -289,5 +290,8 @@ button {
   margin-bottom: 15px;
   color:rgb(100, 100, 100);
   text-align: center;
-  
+}
+
+.phone-icon {
+  font-size: 18px;
 }
