--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,9 +8,9 @@
 
     <div class="navigation">
       <ul>
-        <li><a routerLink="add" routerLinkActive="active-link">Add service</a></li>
-        <li><a routerLink="rules" routerLinkActive="active-link">Sorting rules</a></li>
-        <li><a routerLink="map" routerLinkActive="active-link">Drop-off points</a></li>
+        <li><a routerLink="/add" routerLinkActive="active-link">Add service</a></li>
+        <li><a routerLink="/rules" routerLinkActive="active-link">Sorting rules</a></li>
+        <li><a routerLink="/map" routerLinkActive="active-link">Drop-off points</a></li>
       </ul>
 
      
