--- a/src/app/rules-details/rules-details.component.html
+++ b/src/app/rules-details/rules-details.component.html
@@ -8,5 +8,6 @@
                 <img src="../../assets/traced.png">
             </div>
         </div>
+        <a routerLink="/map"  class="rules-block-button">{{rules.button}}</a>
     </div>
 </div>
