--- a/src/styles.scss
+++ b/src/styles.scss
@@ -140,6 +140,10 @@ h6 {
     background-image: url("./assets/mapbox-icon-glass.png");
   }
 
+  &.glass.organic {
+    background-image: url("./assets/mapbox-icon-glass-organic.png");
+  }
+
   &.clothes {
     background-image: url("./assets/mapbox-icon-clothes.png");
   }
