--- a/src/styles.scss
+++ b/src/styles.scss
@@ -115,6 +115,11 @@ h6 {
     background-image: url("./assets/mapbox-icon-plastic-metal.png");
   }
 
+  &.plastic.paper {
+    background-image: url("./assets/mapbox-icon-plastic-paper.png");
+  }
+
+
   &.metal {
     background-image: url("./assets/mapbox-icon-metal.png");
   }
