--- a/src/app/pages/add-service-page/add-service-page.component.scss
+++ b/src/app/pages/add-service-page/add-service-page.component.scss
@@ -9,7 +9,7 @@ p {
     text-align: center;
     font-family: Roboto;
     line-height:22,5px;
-    margin-bottom: 36px;
+    margin-bottom: 28px;
 }
 
 input[placeholder="Address"] {
@@ -53,15 +53,24 @@ input.ng-touched.ng-invalid {
     min-width: 248px;
     position: relative;
 
-    input,
-    select,
-    option {
+    h3 {
+        text-align: center;
+        font-family: Roboto;
+        margin-bottom: 6px;
+        color: rgb(116, 116, 116);
+    }
+
+    > input,
+    > select,
+    > option {
         font-size: 16px;
         font-family: Roboto;
         padding: 13px;
         width: 100%;
         box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
         border-radius: 5px;
+        display: flex;
+       
     }
     select {
         appearance: none;
@@ -69,7 +78,44 @@ input.ng-touched.ng-invalid {
         background-position-x: 97%;
         background-position-y: 50%;
     }
+}
+
+.type-waste {
+    font-size: 16px;
+    font-family: Roboto;
+    padding: 0;
+    box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    height: 45px;
+    display: flex;
     
+
+    input {
+        height: 100%;
+        display: none;
+    }
+
+    input + label {
+        padding: 12px;
+        box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25); 
+        flex: 1 0 0;
+        text-align: center;
+        &:hover {
+            background-color: rgb(223, 223, 223);
+        }
+    }
+
+    input + label:first-of-type {
+        border-radius: 5px 0 0 5px;
+    }
+
+    input + label:last-of-type {
+        border-radius: 0 5px 5px 0;
+    }
+
+    input[type="checkbox"]:checked + label {
+        background-color: rgba(34, 168, 0, 0.568);
+    }
 }
 
 .taxi-button {
@@ -123,4 +169,8 @@ input.ng-touched.ng-invalid {
 .validation {
     height: 24px;
     padding-left: 8px;
+}
+
+.addressValid {
+    display: none;
 }
