--- a/src/styles.scss
+++ b/src/styles.scss
@@ -115,6 +115,10 @@ h6 {
     background-image: url("./assets/mapbox-icon-plastic-metal.png");
   }
 
+  &.plastic.batteries {
+    background-image: url("./assets/mapbox-icon-plastic-batteries.png");
+  }
+
   &.plastic.paper {
     background-image: url("./assets/mapbox-icon-plastic-paper.png");
   }
