--- a/src/app/pages/rules-page/rules-page.component.html
+++ b/src/app/pages/rules-page/rules-page.component.html
@@ -42,8 +42,23 @@
 
       </ul>
       <ul class="rules-column">
+        <a
+        [routerLink]="['rules']"
+        href="#paper"
+        [pageScrollDuration]="500"
+        pageScroll
+      >
         <li>Paper</li>
+        </a>
+
+        <a
+        [routerLink]="['rules']"
+        href="#glass"
+        [pageScrollDuration]="500"
+        pageScroll
+      >
         <li>Glass</li>
+        </a>
         <a
         [routerLink]="['rules']"
         href="#plastic"
