--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home-section">
     <div class="title-block">
         <div class="title-block-text">
-            <h1>FRESH LOOK AT RECYCLING</h1>
+            <h1>Reinventing recycling</h1>
             <div class="title-block-button">
                 <div class="title-button" routerLink="/map" >
                     Recycling services 
@@ -16,10 +16,10 @@
     <div class="about-us-block">
 
         <h2>ABOUT US</h2>
-        <p>Likewise, the scope and location of staff training allows one to assess the importance of significant
-            financial and administrative conditions. Thus, the constant quantitative growth and scope of our activity is
-            an interesting experiment to verify the appropriate activation conditions. The task of the organization, in
-            particular the new model of organizational activity, provides a wide range of (specialists).</p>
+        <p>This is a new age of recycling. The conception of the app is to connect eco-friendly people and recycling services to make the process of recycling easier and support 
+            Russian eco businesses and organizations. Do you want to find the nearest service to your house or quickly find if the particular material is recyclable? The app is the perfect option. 
+            Do you want to found your recycling service but are afraid that this is too difficult? Now you can set up a point on the map with a few clicks and the next day thousands of users will see it. 
+                  </p>
 
 
         <div class="about-us-block-photo">
