--- a/src/app/pages/rules-page/rules-page.component.html
+++ b/src/app/pages/rules-page/rules-page.component.html
@@ -5,7 +5,7 @@
     <div class="rules-lists">
       <ul class="rules-column">
         <a
-          [routerLink]="['rules']"
+          [routerLink]="['/rules']"
           href="#batteries"
           [pageScrollDuration]="500"
           pageScroll
@@ -14,7 +14,7 @@
         </a>
 
         <a
-          [routerLink]="['rules']"
+          [routerLink]="['/rules']"
           href="#clothes"
           [pageScrollDuration]="500"
           pageScroll
@@ -23,7 +23,7 @@
         </a>
 
         <a
-          [routerLink]="['rules']"
+          [routerLink]="['/rules']"
           href="#e-waste"
           [pageScrollDuration]="500"
           pageScroll
@@ -32,7 +32,7 @@
         </a>
 
         <a
-          [routerLink]="['rules']"
+          [routerLink]="['/rules']"
           href="#light-bulbs"
           [pageScrollDuration]="500"
           pageScroll
@@ -43,7 +43,7 @@
       </ul>
       <ul class="rules-column">
         <a
-        [routerLink]="['rules']"
+        [routerLink]="['/rules']"
         href="#paper"
         [pageScrollDuration]="500"
         pageScroll
@@ -52,7 +52,7 @@
         </a>
 
         <a
-        [routerLink]="['rules']"
+        [routerLink]="['/rules']"
         href="#glass"
         [pageScrollDuration]="500"
         pageScroll
@@ -60,7 +60,7 @@
         <li>Glass</li>
         </a>
         <a
-        [routerLink]="['rules']"
+        [routerLink]="['/rules']"
         href="#plastic"
         [pageScrollDuration]="500"
         pageScroll
@@ -69,7 +69,7 @@
       </a>
 
         <a
-          [routerLink]="['rules']"
+          [routerLink]="['/rules']"
           href="#metal"
           [pageScrollDuration]="500"
           pageScroll
@@ -101,7 +101,7 @@
 <a
   [class.show]="showButton"
   id="button"
-  [routerLink]="['rules']"
+  [routerLink]="['/rules']"
   href="#top"
   [pageScrollDuration]="500"
   pageScroll
