--- a/src/app/pages/rules-page/rules-page.component.scss
+++ b/src/app/pages/rules-page/rules-page.component.scss
@@ -1,5 +1,5 @@
 .bg {
-  background: url("../../../assets/bgRules.jpg");
+  background: url("../../../assets/img_sorting_rules.png");
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
