--- a/src/app/pages/add-service-page/add-service-page.component.scss
+++ b/src/app/pages/add-service-page/add-service-page.component.scss
@@ -138,7 +138,7 @@ input.ng-touched.ng-invalid {
     }
 }
 .bg {
-    background: url("../../../assets/elki.jpg");
+    background: url("../../../assets/img_registration_service.png");
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
