[FIX] height of comments

--- a/src/app/comments/comments.component.scss
+++ b/src/app/comments/comments.component.scss
@@ -4,7 +4,7 @@
   max-width: 480px;
   left: 0;
   top: 80px;
-  height: 637px;
+  height: calc(100vh - 86px);
   z-index: 3;
   padding: 20px;
   background: #ffffff;
