--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,4 +19,4 @@
   </div>
 </header>
 
-<ng-template #logout><a class="logout" (click)="auth.logout()" [routerLink]="['/auth', 'login']" routerLinkActive="active-link">Logout</a></ng-template>
+<ng-template #logout><a class="logout" (click)="auth.logout()" [routerLink]="['/auth', 'login']" routerLinkActive="active-link" *ngIf="userName$ | async as userName">{{userName}}</a></ng-template>
