--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,6 +43,7 @@ html,
 body {
   width: 100%;
   font-size: 100%;
+  background-color: #F8FAFF;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
