[FIX] google icon

--- a/src/app/auth/register-page/register-page.component.scss
+++ b/src/app/auth/register-page/register-page.component.scss
@@ -47,7 +47,9 @@
         margin-bottom: 40px;
 
         span {
-            margin-right: 17px;
+            margin-right: 16px;
+            position: relative;
+            bottom: 3px;
         }
     }
 }
