--- a/src/app/auth/login-page/login-page.component.scss
+++ b/src/app/auth/login-page/login-page.component.scss
@@ -1,168 +1,330 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:700,800);
-
-:focus {
-  outline: none;
-}
-::-webkit-input-placeholder {
-  color: #dedfdf;
-}
-::-moz-placeholder {
-  color: #dedfdf;
-}
-:-moz-placeholder {
-  color: #dedfdf;
-}
-::-ms-input-placeholder {
-  color: #dedfdf;
+.register-section {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 80px;
+  height: calc(100vh - 80px);
+  font-family: "Inter", sans-serif;
 }
 
-.container {
-  background: url("../../../assets/oboi-les-v-tumane.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: #fff;
-  font-family: "Raleway", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  height: 100vh;
+.register-welcome-block {
+  background-color: #f8faff;
+  width: 800px;
 }
 
-#wrapper,
-label,
-#arrow,
-button span {
-  transition: all 0.5s cubic-bezier(0.6, 0, 0.4, 1);
+.register-form-block {
+  margin: auto;
+  padding: 42px 0;
+  max-width: 420px;
 }
 
-#wrapper {
-  overflow: hidden;
+.register-form-header {
+  h3 {
+    font-weight: bold;
+    font-size: 32px;
+    line-height: 39px;
+    color: #0a0a2e;
+    margin-bottom: 20px;
+  }
+  p {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    color: #9ca3bf;
+    margin-bottom: 32px;
+  }
+
+  button {
+    background: #f8faff;
+    border: 1px solid #c7cde5;
+    box-sizing: border-box;
+    border-radius: 8px;
+    padding: 18px 0;
+    width: 420px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    color: #0a0a2e;
+    margin-bottom: 40px;
+
+    &:hover {
+      background: #ececec;
+      transition: all 150ms;
+    }
+
+    span {
+      margin-right: 16px;
+      position: relative;
+      bottom: 3px;
+    }
+  }
 }
 
-#signin:checked ~ #wrapper {
-  height: 178px;
-}
-#signin:checked ~ #wrapper #arrow {
-  left: 32px;
-}
-#signin:checked ~ button span {
-  transform: translate3d(0, -72px, 0);
+.registration-variant {
+  display: flex;
+  align-items: center;
+  color: #c7cde5;
+  margin-bottom: 32px;
+
+  &::before {
+    content: "";
+    margin-right: 16px;
+    border-top: 1px solid #c7cde5;
+    width: 50%;
+  }
+
+  &::after {
+    content: "";
+    border-top: 1px solid #c7cde5;
+    width: 50%;
+    margin-left: 16px;
+  }
 }
 
-#signup:checked ~ #wrapper {
-  height: 338px;
-}
-#signup:checked ~ #wrapper #arrow {
-  left: 137px;
-}
-#signup:checked ~ button span {
-  transform: translate3d(0, -144px, 0);
+input {
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 8px;
+  border: 1px solid #c7cde5;
+  box-sizing: border-box;
+  border-radius: 8px;
+  padding: 16px;
+  margin: 8px 0 24px;
+
+  &:focus {
+    border: 1px solid #6382fc;
+  }
 }
 
-#reset:checked ~ #wrapper {
-  height: 94px;
-}
-#reset:checked ~ #wrapper #arrow {
-  left: 404px;
-}
-#reset:checked ~ button span {
-  transform: translate3d(0, 0, 0);
-}
+.name-info {
+  display: flex;
+  justify-content: space-between;
 
-form {
-  width: 450px;
-  height: 370px;
-  margin: -185px -225px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-}
-
-input[type="radio"] {
-  display: none;
+  .input {
+    max-width: 200px;
+  }
 }
 
 label {
-  cursor: pointer;
-  display: inline-block;
-  font-size: 22px;
-  font-weight: 800;
-  opacity: 0.5;
-  margin-bottom: 30px;
-  text-transform: uppercase;
-}
-label:hover {
-  transition: all 0.3s cubic-bezier(0.6, 0, 0.4, 1);
-  opacity: 1;
-}
-label[for="signin"] {
-  margin-right: 20px;
-}
-label[for="reset"] {
-  float: right;
-}
-input[type="radio"]:checked + label {
-  opacity: 1;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+
+  color: #0a0a2e;
 }
 
-input[type="text"],
-input[type="password"] {
-  background: #fff;
-  border: none;
+.register-button {
+  background: #007eba;
   border-radius: 8px;
-  font-size: 27px;
-  font-family: "Raleway", sans-serif;
-  height: 72px;
-  width: 99.5%;
-  margin-bottom: 10px;
-  opacity: 1;
-  text-indent: 20px;
-  transition: all 0.2s ease-in-out;
-}
-button {
-  background: #079bcf;
-  border: none;
-  border-radius: 8px;
-  color: #fff;
-  cursor: pointer;
-  font-family: "Raleway", sans-serif;
-  font-size: 27px;
-  height: 72px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  color: #ffffff;
+  padding: 18px;
   width: 100%;
-  margin-bottom: 10px;
-  overflow: hidden;
-  transition: all 0.3s cubic-bezier(0.6, 0, 0.4, 1);
-}
-button span {
-  display: block;
-  line-height: 72px;
-  position: relative;
-  top: -2px;
-  transform: translate3d(0, 0, 0);
-}
-button:hover {
-  background: #007ba5;
+  &:hover {
+    background: #006797;
+    transition: all 200ms;
+  }
 }
 
-#arrow {
-  height: 0;
-  width: 0;
-  border-bottom: 10px solid #fff;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  position: relative;
-  left: 32px;
-}
+.login-page {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  margin-top: 32px;
 
-#hint {
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  bottom: 20px;
+  span {
+    color: #007eba;
+
+    &:hover {
+      color: #03567c;
+    }
+  }
 }
 
 .invalid {
-  box-shadow: 0px 0px 10px 5px rgba(238, 1, 1, 0.582) inset;
+  border: 1px solid #e25454;
 }
 
-.error {
-  color: red;
+.valid-field {
+  color: #e25454;
+  font-size: 10px;
+  visibility: hidden;
+  margin-top: 7px;
 }
+
+.invalid-field {
+  color: #e25454;
+  font-size: 10px;
+  visibility: visible;
+  margin-top: 7px;
+}
+
+// @import url(http://fonts.googleapis.com/css?family=Raleway:700,800);
+
+// :focus {
+//   outline: none;
+// }
+// ::-webkit-input-placeholder {
+//   color: #dedfdf;
+// }
+// ::-moz-placeholder {
+//   color: #dedfdf;
+// }
+// :-moz-placeholder {
+//   color: #dedfdf;
+// }
+// ::-ms-input-placeholder {
+//   color: #dedfdf;
+// }
+
+// .container {
+//   background: url("../../../assets/oboi-les-v-tumane.jpg");
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   color: #fff;
+//   font-family: "Raleway", sans-serif;
+//   -webkit-font-smoothing: antialiased;
+//   height: 100vh;
+// }
+
+// #wrapper,
+// label,
+// #arrow,
+// button span {
+//   transition: all 0.5s cubic-bezier(0.6, 0, 0.4, 1);
+// }
+
+// #wrapper {
+//   overflow: hidden;
+// }
+
+// #signin:checked ~ #wrapper {
+//   height: 178px;
+// }
+// #signin:checked ~ #wrapper #arrow {
+//   left: 32px;
+// }
+// #signin:checked ~ button span {
+//   transform: translate3d(0, -72px, 0);
+// }
+
+// #signup:checked ~ #wrapper {
+//   height: 338px;
+// }
+// #signup:checked ~ #wrapper #arrow {
+//   left: 137px;
+// }
+// #signup:checked ~ button span {
+//   transform: translate3d(0, -144px, 0);
+// }
+
+// #reset:checked ~ #wrapper {
+//   height: 94px;
+// }
+// #reset:checked ~ #wrapper #arrow {
+//   left: 404px;
+// }
+// #reset:checked ~ button span {
+//   transform: translate3d(0, 0, 0);
+// }
+
+// form {
+//   width: 450px;
+//   height: 370px;
+//   margin: -185px -225px;
+//   position: absolute;
+//   left: 50%;
+//   top: 50%;
+// }
+
+// input[type="radio"] {
+//   display: none;
+// }
+
+// label {
+//   cursor: pointer;
+//   display: inline-block;
+//   font-size: 22px;
+//   font-weight: 800;
+//   opacity: 0.5;
+//   margin-bottom: 30px;
+//   text-transform: uppercase;
+// }
+// label:hover {
+//   transition: all 0.3s cubic-bezier(0.6, 0, 0.4, 1);
+//   opacity: 1;
+// }
+// label[for="signin"] {
+//   margin-right: 20px;
+// }
+// label[for="reset"] {
+//   float: right;
+// }
+// input[type="radio"]:checked + label {
+//   opacity: 1;
+// }
+
+// input[type="text"],
+// input[type="password"] {
+//   background: #fff;
+//   border: none;
+//   border-radius: 8px;
+//   font-size: 27px;
+//   font-family: "Raleway", sans-serif;
+//   height: 72px;
+//   width: 99.5%;
+//   margin-bottom: 10px;
+//   opacity: 1;
+//   text-indent: 20px;
+//   transition: all 0.2s ease-in-out;
+// }
+// button {
+//   background: #079bcf;
+//   border: none;
+//   border-radius: 8px;
+//   color: #fff;
+//   cursor: pointer;
+//   font-family: "Raleway", sans-serif;
+//   font-size: 27px;
+//   height: 72px;
+//   width: 100%;
+//   margin-bottom: 10px;
+//   overflow: hidden;
+//   transition: all 0.3s cubic-bezier(0.6, 0, 0.4, 1);
+// }
+// button span {
+//   display: block;
+//   line-height: 72px;
+//   position: relative;
+//   top: -2px;
+//   transform: translate3d(0, 0, 0);
+// }
+// button:hover {
+//   background: #007ba5;
+// }
+
+// #arrow {
+//   height: 0;
+//   width: 0;
+//   border-bottom: 10px solid #fff;
+//   border-left: 10px solid transparent;
+//   border-right: 10px solid transparent;
+//   position: relative;
+//   left: 32px;
+// }
+
+// #hint {
+//   width: 100%;
+//   text-align: center;
+//   position: absolute;
+//   bottom: 20px;
+// }
+
+// .invalid {
+//   box-shadow: 0px 0px 10px 5px rgba(238, 1, 1, 0.582) inset;
+// }
+
+// .error {
+//   color: red;
+// }
