--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -74,6 +74,10 @@ a {
     background-color: rgba(189, 173, 34, 0.329);
 }
 
+.light-shadow {
+    box-shadow: 0px 10px 30px #ecf0fb;
+}
+
 @media screen and (max-width: 768px) {
     .navigation {
         display: none;
