before google auth

--- a/src/app/auth/login-page/login-page.component.html
+++ b/src/app/auth/login-page/login-page.component.html
@@ -8,6 +8,7 @@
       <div class="register-form-header">
           <h3>Welcome to ISort</h3>
           <div *ngIf="error$ | async as error" class="error">{{error}}</div>
+          <div id="buttonDiv"></div> 
           <button> <span><img src="../../../assets/auth-page-img/google.svg"> </span> Sign in with Google</button>
       </div>
 
