--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,5 +1,20 @@
 <div class="container">
-  <p>Waste type</p>
+
+  <div class="exit-btn">
+    <span class="material-icons">
+      close
+      </span>
+  </div>
+
+  <div class="search">
+    <input type="text" class="search-input" placeholder="Search point by name...">
+    <button>
+      <span class="material-icons">
+        search
+        </span>
+    </button>
+  </div>
+
 
   <div>
     <input
