--- a/src/app/filter/filter.component.scss
+++ b/src/app/filter/filter.component.scss
@@ -1,8 +1,11 @@
 .container {
   position: absolute;
-  left: 6%;
-  top: 131px;
-  padding: 20px 80px 60px 50px;
+  left: 0;
+  top:0;
+  z-index: 1;
+  height: 100vh;
+  width: 30%;
+  padding: 100px 50px 50px 50px;
   background: #ffffff;
   border: 1px solid #8d8b88;
   box-sizing: border-box;
@@ -15,10 +18,6 @@
     display: flex;
     align-items: center;
 
-    span {
-      margin-left: 15px;
-    }
-
     label {
       margin-left: 5px;
     }
@@ -28,6 +27,51 @@
 p {
   margin-top: 30px;
   margin-bottom: 25px;
+}
+
+.exit-btn {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 30px;
+  font-size: 18px;
+  color: #D1D1D1 !important;
+  position: relative;
+  left: 8px;
+}
+
+.search-input {
+  width: 100%;
+  height: 44px;
+  border: 1px solid #007EBA;
+  box-sizing: border-box;
+  border-radius: 10px;
+  padding: 0 5px;
+}
+
+.search {
+
+
+  button {
+    position: relative;
+    right: 35px;
+    width: 45px;
+    height: 44px;
+    background: #007EBA;
+    border-radius: 0px 10px 10px 0px; 
+    color: #ffffff;
+
+    &:hover {
+      color: #e4e4e4;
+    }
+
+    span {
+      
+      font-size: 22px;
+      position: relative;
+      top: 2px;
+      left: 1px;
+    }
+  }
 }
 
 input[type="checkbox"] {
