--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,83 +3,152 @@ header {
   width: 100%;
   left: 0px;
   top: 0px;
-  background: #ffffff;
-  box-shadow: 0px 0px 10px 6px rgba(0, 0, 0, 0.25);
+  background: rgb(0, 127, 186);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   z-index: 2;
 }
 
 a {
-    text-decoration: none;
-    color: black;
-    font-size: 18px;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
 }
 
+// .active-link {
 
-.active-link {
-    border: 1px solid black;
-    &:hover {
-        background-color: #f5f5f5b2;
-    }
+// }
+
+.exit {
+  position: absolute;
+  top: 65px;
+  right: 4.3%;
+  background: #ffffff;
+  font-size: 18px;
+  color: #007eba;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 6px rgba(0, 0, 0, 0.25);
+
+  &:hover {
+      background-color: rgb(230, 230, 230);
+  }
+
+  span {
+    color: rgba(208, 208, 208, 1);
+    margin-left: 50px;
+  }
 }
 
 .container {
-    width: 90%;
-    margin: 18px auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-}
-
-.logo__text {
-    font-size: 36px;
-    margin-right: 10px;
-}
-
-.logo__img {
-    width: 48px;
-    height: 62px;
-}
-
-.navigation {
-    display: flex;
-    font-family: "Roboto";
-    ul {
-        list-style: none;
-        display: flex;
-        align-items: center;
-        li {
-            margin-left:  60px;
-           a {
-            padding: 8px 16px;
-            &:hover {
-                background-color: rgb(233, 233, 233);
-                color: #314506;
-                transition: all 100ms;
-            }
-           }
-        }
-    }
+  width: 90%;
+  margin: 18px auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .login {
-    background-color: rgba(15, 165, 1, 0.288);
+  display: flex;
+  align-items: center;
+
+  img:hover {
+      filter: sepia(10);
+  }
+
+  span {
+    margin-left: 16px;
+  }
 }
 
-.logout {
-    background-color: rgba(189, 173, 34, 0.329);
+.logout-btn {
+  background: rgb(0, 127, 186);
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+
+  span {
+    margin-left: 8px;
+  }
+
+  &:hover {
+    color: rgb(219, 219, 219);
+  }
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+
+  span {
+    font-size: 30px;
+    font-weight: 600;
+    margin-left: 20px;
+  }
+}
+
+.navigation {
+  display: flex;
+  margin-right: 15%;
+  font-weight: 500;
+
+  ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    li {
+      margin-left: 70px;
+      a {
+        &:hover {
+          color: #d1d1d1;
+          transition: all 100ms;
+        }
+      }
+    }
+  }
 }
 
 .light-shadow {
-    box-shadow: 0px 10px 30px #ecf0fb;
+  box-shadow: 0px 10px 30px #ecf0fb;
+}
+
+.auth {
+  display: flex;
+  align-items: center;
+  & > a > span:first-child {
+    color: #ffffff;
+    font-size: 28px;
+    margin-right: 27px;
+  }
+
+  & > a > span:first-child:hover {
+      transform: scale(1.1);
+  }
+
+  a:hover {
+    color: #d1d1d1;
+    transition: all 100ms;
+  }
+}
+
+.signin {
+  color: #ffffff;
+  padding: 10px 20px;
+  background-color: #23698b;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 600;
+  &:hover {
+    background-color: #005179;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .navigation {
-        display: none;
-    }
+  .navigation {
+    display: none;
+  }
 }
