--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
   src: url(assets/fonts/Roboto/Roboto-Regular.ttf) format("truetype");
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 * {
   padding: 0;
@@ -45,11 +45,11 @@ html,
 body {
   width: 100%;
   font-size: 100%;
-  background-color: #F8FAFF;
+  background-color: #f8faff;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  font-family: "RedRose", Arial, Helvetica, sans-serif;
+  font-family: Inter, Arial, Helvetica, sans-serif;
 }
 
 input,
@@ -88,6 +88,10 @@ img {
   vertical-align: top;
 }
 
+hr {
+  height: 1px;
+}
+
 h1,
 h2,
 h3,
@@ -102,8 +106,8 @@ h6 {
   background-image: url("./assets/mapbox-icon-plastic.png");
   background-size: cover;
   border-radius: 50%;
-  width: 45px;
-  height: 45px;
+  width: 50px;
+  height: 50px;
   cursor: pointer;
 
   &.plastic {
@@ -126,7 +130,6 @@ h6 {
     background-image: url("./assets/mapbox-icon-plastic-paper.png");
   }
 
-
   &.metal {
     background-image: url("./assets/mapbox-icon-metal.png");
   }
@@ -142,7 +145,6 @@ h6 {
   &.paper.glass {
     background-image: url("./assets/mapbox-icon-glass-paper.png");
   }
-
 
   &.batteries {
     background-image: url("./assets/mapbox-icon-batteries.png");
@@ -176,26 +178,21 @@ h6 {
     background-image: url("./assets/mapbox-icon-organic.png");
   }
 
-  
   &.glass.plastic {
     background-image: url("./assets/mapbox-icon-glass-plastic.png");
   }
-
 }
 
 .mapboxgl-popup {
-  max-width: 340px !important;
-  &:hover {
-    display: block;
-  }
+  max-width: 350px !important;
 }
 
 .mapboxgl-popup-content {
   text-align: left;
-  font-family: "Roboto";
+
   font-weight: 400;
-  border: 2px solid #6b8c21;
-  padding: 20px;
+  border-radius: 20px;
+  padding: 10px;
   p {
     color: #000000;
     font-size: 14px;
@@ -230,6 +227,7 @@ h6 {
   .rating-result {
     width: 265px;
     margin: 8px auto;
+    display: none;
   }
   .rating-result span {
     padding: 0;
@@ -245,6 +243,104 @@ h6 {
   .rating-result > span.active {
     color: gold;
     text-shadow: 1px 1px #c60;
+  }
+}
+
+.popup-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 16px;
+}
+
+.popup-description {
+  border-radius: 20px;
+  position: absolute;
+  top: 160px;
+  width: calc(100% - 20px);
+  background-color: #fff;
+  padding: 14px;
+  
+  
+
+  .popup-button {
+    background-color: rgba(241, 76, 76, 1);
+    border-radius: 50%;
+
+    img {
+      padding: 13px;
+    }
+  }
+
+  .popup-button-wrapper {
+    background-color: #fff;
+    border-radius: 50%;
+    position: relative;
+    bottom: 16px;
+    padding: 4px;
+    
+
+  }
+
+  h3 {
+    font-weight: 600;
+    font-size: 18px;
+    color: #005e8b;
+  }
+
+  p {
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 15px;
+
+    color: #5c5c5c;
+    padding: 10px 0;
+    border-top: 1px solid #bcbcbc;
+    border-bottom: 1px solid #bcbcbc;
+  }
+}
+
+.popup-wrap {
+  margin: 0 -24px -14px;
+  border-radius: 0 0 20px 20px;
+  padding: 0 24px;
+  background-color: #fff;
+}
+
+.popup-image {
+  border-radius: 10px;
+  width: 330px;
+  height: 194px;
+  background-image: url(./assets/eco-service.png);
+}
+
+.popup-details {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  margin-top: 15px;
+
+  h4 {
+    display: inline;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 15px;
+    color: #767676;
+  }
+
+  img {
+    margin-bottom: 10px;
+    margin-left: 3px;
+    position: relative;
+    bottom: 2px;
+  }
+
+  & > div:last-of-type {
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 13px;
+    color: #2e3f6e;
   }
 }
 
